--- a/Changelog
+++ b/Changelog
@@ -1,15 +1,20 @@
 Flake TODO list
 ---------------
-- Variable block size
-- Adaptive windowing function
 - Apply feature updates from FFmpeg
-- Adjust default settings for compression levels
 - Shared lib/DLL support
 - 24-bit/32-bit lossless
+- Import FFmpeg's FLAC decoder for verification during encoding
+- Vorbis Comment tag support
+- Embedded CUESHEET support
+- Allow wildcards in input filename for encoding multiple files at once
 
 Flake Changelog
 ---------------
 version SVN : current
+- Significant speed improvements
+- Added log search
+- Added variable block size encoding
+- Added level 99 high-compression level
 
 version 0.10 : 11 September 2006 (Initial SVN import)
 - New configure system
