--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ Flake TODO list
 - Apply feature updates from FFmpeg
 - Shared lib/DLL support
 - 24-bit/32-bit lossless
+- Raw audio input
+- AIFF input
 - Import FFmpeg's FLAC decoder for verification during encoding
 - Vorbis Comment tag support
 - Embedded CUESHEET support
