--- a/Changelog
+++ b/Changelog
@@ -18,6 +18,8 @@ version SVN : current
 - Added variable block size encoding
 - Added level 99 high-compression level
 - Quiet encoding mode (no console output except errors)
+- Changed output file designation to "-o output.flac"
+- Changed order method option to "-m #"
 
 version 0.10 : 11 September 2006 (Initial SVN import)
 - New configure system
