add note to README regarding unstable interfaces.

--- a/README
+++ b/README
@@ -5,6 +5,10 @@ The purpose of Flake is to be an alternative to the FLAC reference encoder
 with the goal of increasing encoding speed and implementing experimental
 features.
 
+Neither the program nor the library have stable interfaces. Therefore, the
+commandline options and the library API/ABI may change. After version 1.0 is
+released, this will become more stable.
+
 The FLAC format and reference encoder were created by Josh Coalson and are
 hosted by the Xiph.org Foundation.  Many thanks!
 
