email address update. removing from source files and updating in README and configure.

--- a/README
+++ b/README
@@ -13,6 +13,6 @@ The FLAC format and reference encoder were created by Josh Coalson and are
 hosted by the Xiph.org Foundation.  Many thanks!
 
 -------------------------------------------------------------------------------
-Flake, Copyright (c) 2006 Justin Ruggles <jruggle@earthlink.net>
+Copyright (c) 2006-2007 Justin Ruggles <justinruggles@bellsouth.net>
 http://flake-enc.sourceforge.net/
 -------------------------------------------------------------------------------
