--- a/README
+++ b/README
@@ -13,6 +13,6 @@ The FLAC format and reference encoder were created by Josh Coalson and are
 hosted by the Xiph.org Foundation.  Many thanks!
 
 -------------------------------------------------------------------------------
-Copyright (c) 2006-2007 Justin Ruggles <justinruggles@bellsouth.net>
+Copyright (c) 2006-2007 Justin Ruggles <justin.ruggles@gmail.com>
 http://flake-enc.sourceforge.net/
 -------------------------------------------------------------------------------
