--- a/Changelog
+++ b/Changelog
@@ -11,6 +11,7 @@ version SVN : current
 - Added support for plain AIFF files
 - API changed so that flake_encode_frame() takes 32-bit ints instead of 16-bit
 - Added support for lossless encoding of all valid FLAC bit depths (4 to 32)
+- Added support for RICE2 entropy coding
 
 version 0.11 : 5 August 2007
 - Significant speed improvements
